Set Cognito Identity Pool ID to us-east-1:f9c6dda7-9180-4802-84fb-28676b2c6e7c

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         },
         cognito: {
           // Provide your Cognito Identity Pool ID for unauthenticated auth (recommended)
-          poolId: 'us-east-1_KBUUGhGvG',
+          poolId: 'us-east-1:f9c6dda7-9180-4802-84fb-28676b2c6e7c',
           region: 'us-east-1'
         },
         ui: {
